--- a/sass/style.scss
+++ b/sass/style.scss
@@ -350,6 +350,13 @@ header {
 		}
 	}
 }
+.special-thanks {
+	background: $theme-red;
+	color: white;
+	padding: 50px 0;
+	text-align: center;
+	font-size: 1.8em;	
+}
 footer {
 	padding: 20px;
 	color: $gray;
