use smaller size image

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -135,7 +135,7 @@ header {
 .hero-img {
 	position: relative;
 	height: 580px;
-	background: url("../images/balei1.png") no-repeat bottom;
+	background: url("../images/balei1.jpg") no-repeat bottom;
 	background-size: 100%;
 	color: white;
 	.hero-img-layer {
