--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -577,7 +577,7 @@ header nav ul li a span.english {
 .hero-img {
   position: relative;
   height: 580px;
-  background: url("../images/balei1.png") no-repeat bottom;
+  background: url("../images/balei1.jpg") no-repeat bottom;
   background-size: 100%;
   color: white;
 }
