made the awesome part responsive

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -371,6 +371,9 @@ footer {
 	.new-year .slidesjs-pagination {
 		bottom: 35px;
 	}
+	.more-awesome .each-moment {
+		width: 50%;
+	}
 }
 @media screen and (max-width: 600px) {
 	h1 {
