--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -434,6 +434,38 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   bottom: 0;
 }
 
+/* line 1, ../sass/new-year.scss */
+.new-year {
+  background-color: white;
+  padding-bottom: 10%;
+}
+/* line 4, ../sass/new-year.scss */
+.new-year #new-year-slide {
+  width: 50%;
+  float: left;
+}
+/* line 7, ../sass/new-year.scss */
+.new-year #new-year-slide img {
+  width: 100%;
+}
+/* line 10, ../sass/new-year.scss */
+.new-year #new-year-slide .caption {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  position: absolute;
+  top: 0;
+  text-align: center;
+  padding: 8px 2%;
+  width: 96%;
+}
+/* line 20, ../sass/new-year.scss */
+.new-year .description {
+  width: 48%;
+  float: left;
+  margin-right: 2%;
+  text-align: left;
+}
+
 /* line 32, ../sass/style.scss */
 body {
   font-size: 14px;
@@ -765,50 +797,18 @@ header nav ul li a span.english {
   max-width: 100%;
 }
 
-/* line 288, ../sass/style.scss */
-.new-year {
-  background-color: white;
-  padding-bottom: 10%;
-}
-/* line 291, ../sass/style.scss */
-.new-year #new-year-slide {
-  width: 50%;
-  float: left;
-}
-/* line 294, ../sass/style.scss */
-.new-year #new-year-slide img {
-  width: 100%;
-}
-/* line 297, ../sass/style.scss */
-.new-year #new-year-slide .caption {
-  background-color: rgba(0, 0, 0, 0.7);
-  color: white;
-  position: absolute;
-  top: 0;
-  text-align: center;
-  padding: 8px 2%;
-  width: 96%;
-}
-/* line 307, ../sass/style.scss */
-.new-year .description {
-  width: 48%;
-  float: left;
-  margin-right: 2%;
-  text-align: left;
-}
-
-/* line 314, ../sass/style.scss */
+/* line 289, ../sass/style.scss */
 .about-me {
   padding: 5% 0;
   text-align: center;
   background-color: #EEF8FD;
 }
-/* line 319, ../sass/style.scss */
+/* line 294, ../sass/style.scss */
 .about-me .avators li {
   display: inline-block;
   margin: 0 2%;
 }
-/* line 322, ../sass/style.scss */
+/* line 297, ../sass/style.scss */
 .about-me .avators li img {
   border: 1px solid #ccc;
   height: 100px;
@@ -816,35 +816,35 @@ header nav ul li a span.english {
   border-radius: 57px;
   padding: 6px;
 }
-/* line 331, ../sass/style.scss */
+/* line 306, ../sass/style.scss */
 .about-me .myself {
   width: 70%;
   margin: 20px auto;
 }
-/* line 334, ../sass/style.scss */
+/* line 309, ../sass/style.scss */
 .about-me .myself h3 {
   margin: 5% 0 3% 0;
 }
-/* line 337, ../sass/style.scss */
+/* line 312, ../sass/style.scss */
 .about-me .myself p {
   line-height: 2em;
 }
-/* line 341, ../sass/style.scss */
+/* line 316, ../sass/style.scss */
 .about-me .contact-me img {
   width: 150px;
   border: 1px solid #ccc;
 }
-/* line 345, ../sass/style.scss */
+/* line 320, ../sass/style.scss */
 .about-me .contact {
   display: inline-block;
   margin: 0 2%;
 }
-/* line 348, ../sass/style.scss */
+/* line 323, ../sass/style.scss */
 .about-me .contact p {
   color: #555;
 }
 
-/* line 353, ../sass/style.scss */
+/* line 328, ../sass/style.scss */
 .special-thanks {
   background: #920807;
   color: white;
@@ -853,7 +853,7 @@ header nav ul li a span.english {
   font-size: 1.8em;
 }
 
-/* line 360, ../sass/style.scss */
+/* line 335, ../sass/style.scss */
 footer {
   padding: 20px;
   color: #ccc;
@@ -862,39 +862,39 @@ footer {
 }
 
 @media screen and (max-width: 800px) {
-  /* line 367, ../sass/style.scss */
+  /* line 2, ../sass/responsive.scss */
   .new-year .description,
   .new-year #new-year-slide {
     width: 100%;
   }
 
-  /* line 371, ../sass/style.scss */
+  /* line 6, ../sass/responsive.scss */
   .new-year .slidesjs-pagination {
     bottom: 35px;
   }
 
-  /* line 374, ../sass/style.scss */
+  /* line 9, ../sass/responsive.scss */
   .more-awesome .each-moment {
     width: 50%;
   }
 }
 @media screen and (max-width: 600px) {
-  /* line 379, ../sass/style.scss */
+  /* line 14, ../sass/responsive.scss */
   h1 {
     font-size: 2.2em;
   }
 
-  /* line 382, ../sass/style.scss */
+  /* line 17, ../sass/responsive.scss */
   .brief-introduction {
     font-size: 12px;
   }
 
-  /* line 385, ../sass/style.scss */
+  /* line 20, ../sass/responsive.scss */
   .slidesjs-container {
     font-size: 12px;
   }
 
-  /* line 388, ../sass/style.scss */
+  /* line 23, ../sass/responsive.scss */
   .introduction .story {
     width: 100%;
     float: none;
@@ -902,93 +902,93 @@ footer {
     padding-bottom: 30px;
   }
 
-  /* line 394, ../sass/style.scss */
+  /* line 29, ../sass/responsive.scss */
   .hero-img {
     background-size: cover;
     height: 300px;
   }
 
-  /* line 398, ../sass/style.scss */
+  /* line 33, ../sass/responsive.scss */
   .hero-img .hero-img-layer {
     height: 300px;
   }
 
-  /* line 401, ../sass/style.scss */
+  /* line 36, ../sass/responsive.scss */
   header {
     text-align: center;
   }
 
-  /* line 404, ../sass/style.scss */
+  /* line 39, ../sass/responsive.scss */
   header a.logo {
     width: 160px;
   }
 
-  /* line 407, ../sass/style.scss */
+  /* line 42, ../sass/responsive.scss */
   .hero-img .slogon {
     width: 100%;
     padding-top: 15%;
   }
 
-  /* line 411, ../sass/style.scss */
+  /* line 46, ../sass/responsive.scss */
   .hero-img .brief-introduction ul li {
     padding: 2% 3%;
   }
 
-  /* line 414, ../sass/style.scss */
+  /* line 49, ../sass/responsive.scss */
   #live-dance-show .slidesjs-navigation {
     transform: scale(0.5);
     -webkit-transform: scale(0.5);
     top: 30%;
   }
 
-  /* line 419, ../sass/style.scss */
+  /* line 54, ../sass/responsive.scss */
   #live-dance-show .slidesjs-pagination {
     left: 30%;
     transform: scale(1);
     -webkit-transform: scale(1);
   }
 
-  /* line 424, ../sass/style.scss */
+  /* line 59, ../sass/responsive.scss */
   .about-me .myself {
     width: 100%;
   }
 
-  /* line 427, ../sass/style.scss */
+  /* line 62, ../sass/responsive.scss */
   h2 {
     padding-top: 40px;
   }
 }
 @media screen and (max-width: 500px) {
-  /* line 432, ../sass/style.scss */
+  /* line 67, ../sass/responsive.scss */
   .slidesjs-navigation {
     top: 20%;
   }
 
-  /* line 436, ../sass/style.scss */
+  /* line 71, ../sass/responsive.scss */
   #live-dance-show .slidesjs-pagination,
   .new-year .slidesjs-pagination {
     bottom: 5px;
     left: 0;
   }
 
-  /* line 441, ../sass/style.scss */
+  /* line 76, ../sass/responsive.scss */
   .new-year .slidesjs-pagination {
     bottom: 20px;
   }
 
-  /* line 444, ../sass/style.scss */
+  /* line 79, ../sass/responsive.scss */
   .each-news {
     margin-top: 50px;
   }
 }
 @media screen and (max-width: 1300px) {
-  /* line 451, ../sass/style.scss */
+  /* line 86, ../sass/responsive.scss */
   .big-screen {
     display: none;
   }
 }
 @media screen and (max-width: 600px) {
-  /* line 456, ../sass/style.scss */
+  /* line 91, ../sass/responsive.scss */
   .small-screen {
     display: none;
   }
