--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -72,60 +72,58 @@
   }
 
   /* line 49, ../sass/responsive.scss */
-  #live-dance-show .slidesjs-navigation {
-    transform: scale(0.5);
-    -webkit-transform: scale(0.5);
-    top: 30%;
+  .slidesjs-navigation {
+    display: none;
   }
 
-  /* line 54, ../sass/responsive.scss */
+  /* line 52, ../sass/responsive.scss */
   #live-dance-show .slidesjs-pagination {
     left: 30%;
     transform: scale(1);
     -webkit-transform: scale(1);
   }
 
-  /* line 59, ../sass/responsive.scss */
+  /* line 57, ../sass/responsive.scss */
   .about-me .myself {
     width: 100%;
   }
 
-  /* line 62, ../sass/responsive.scss */
+  /* line 60, ../sass/responsive.scss */
   h2 {
     padding-top: 40px;
   }
 }
 @media screen and (max-width: 500px) {
-  /* line 67, ../sass/responsive.scss */
+  /* line 65, ../sass/responsive.scss */
   .slidesjs-navigation {
     top: 20%;
   }
 
-  /* line 71, ../sass/responsive.scss */
+  /* line 69, ../sass/responsive.scss */
   #live-dance-show .slidesjs-pagination,
   .new-year .slidesjs-pagination {
     bottom: 5px;
     left: 0;
   }
 
-  /* line 76, ../sass/responsive.scss */
+  /* line 74, ../sass/responsive.scss */
   .new-year .slidesjs-pagination {
     bottom: 20px;
   }
 
-  /* line 79, ../sass/responsive.scss */
+  /* line 77, ../sass/responsive.scss */
   .each-news {
     margin-top: 50px;
   }
 }
 @media screen and (max-width: 1300px) {
-  /* line 86, ../sass/responsive.scss */
+  /* line 84, ../sass/responsive.scss */
   .big-screen {
     display: none;
   }
 }
 @media screen and (max-width: 600px) {
-  /* line 91, ../sass/responsive.scss */
+  /* line 89, ../sass/responsive.scss */
   .small-screen {
     display: none;
   }
