--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -383,12 +383,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     width: 100%;
   }
 }
-/* line 2, ../sass/awesome.scss */
+/* line 1, ../sass/awesome.scss */
 .more-awesome {
   text-align: center;
   background-color: white;
 }
-/* line 5, ../sass/awesome.scss */
+/* line 4, ../sass/awesome.scss */
 .more-awesome .each-moment {
   position: relative;
   width: 25%;
@@ -400,18 +400,18 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-/* line 12, ../sass/awesome.scss */
+/* line 11, ../sass/awesome.scss */
 .more-awesome .each-moment img {
   width: 100%;
 }
-/* line 15, ../sass/awesome.scss */
+/* line 14, ../sass/awesome.scss */
 .more-awesome .each-moment .layer {
   width: 100%;
   height: 100%;
   background-color: red;
   opacity: 0.5;
 }
-/* line 21, ../sass/awesome.scss */
+/* line 20, ../sass/awesome.scss */
 .more-awesome .each-moment p {
   position: absolute;
   width: 100%;
@@ -424,12 +424,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-/* line 30, ../sass/awesome.scss */
+/* line 29, ../sass/awesome.scss */
 .more-awesome .each-moment:hover {
   z-index: 10;
   opacity: 1;
 }
-/* line 33, ../sass/awesome.scss */
+/* line 32, ../sass/awesome.scss */
 .more-awesome .each-moment:hover p {
   bottom: 0;
 }
@@ -935,60 +935,58 @@ footer {
   }
 
   /* line 49, ../sass/responsive.scss */
-  #live-dance-show .slidesjs-navigation {
-    transform: scale(0.5);
-    -webkit-transform: scale(0.5);
-    top: 30%;
+  .slidesjs-navigation {
+    display: none;
   }
 
-  /* line 54, ../sass/responsive.scss */
+  /* line 52, ../sass/responsive.scss */
   #live-dance-show .slidesjs-pagination {
     left: 30%;
     transform: scale(1);
     -webkit-transform: scale(1);
   }
 
-  /* line 59, ../sass/responsive.scss */
+  /* line 57, ../sass/responsive.scss */
   .about-me .myself {
     width: 100%;
   }
 
-  /* line 62, ../sass/responsive.scss */
+  /* line 60, ../sass/responsive.scss */
   h2 {
     padding-top: 40px;
   }
 }
 @media screen and (max-width: 500px) {
-  /* line 67, ../sass/responsive.scss */
+  /* line 65, ../sass/responsive.scss */
   .slidesjs-navigation {
     top: 20%;
   }
 
-  /* line 71, ../sass/responsive.scss */
+  /* line 69, ../sass/responsive.scss */
   #live-dance-show .slidesjs-pagination,
   .new-year .slidesjs-pagination {
     bottom: 5px;
     left: 0;
   }
 
-  /* line 76, ../sass/responsive.scss */
+  /* line 74, ../sass/responsive.scss */
   .new-year .slidesjs-pagination {
     bottom: 20px;
   }
 
-  /* line 79, ../sass/responsive.scss */
+  /* line 77, ../sass/responsive.scss */
   .each-news {
     margin-top: 50px;
   }
 }
 @media screen and (max-width: 1300px) {
-  /* line 86, ../sass/responsive.scss */
+  /* line 84, ../sass/responsive.scss */
   .big-screen {
     display: none;
   }
 }
 @media screen and (max-width: 600px) {
-  /* line 91, ../sass/responsive.scss */
+  /* line 89, ../sass/responsive.scss */
   .small-screen {
     display: none;
   }
